fixed aspacing on language, footer, and profile sections

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,6 +24,7 @@ ul {
 .new-button {
     background-color: #74C557;
     color: white;
+    margin-left: 15px;
 }
 
 .blue-text {
@@ -33,10 +34,22 @@ ul {
   position: fixed;
   top: 0;
 }
+.gray-text {
+  color: #767676;
+}
+.orgs {
+  margin-left: 39px;
+}
+h1 {
+  margin-top: 5px;
+  margin-bottom: 0;
+  font-size: 25px;
+}
 // top nav styling
 #top-nav {
     display: flex;
     align-items: center;
+    padding-left: 75px;
     input, li {
         margin-left: 20px;
     }
@@ -52,7 +65,6 @@ ul {
 .repo-nav {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI";
     color: #5F5F5F;
-
     li {
         margin: 0 20px;
     }
@@ -74,6 +86,10 @@ ul {
 .repo-search-menus {
     display: inline-flex;
 }
+
+.select-menu {
+  padding-left: 15px;
+}
 // profile template
 #profile-template {
     h1 {
@@ -91,9 +107,11 @@ ul {
     h6 {
       color: #767676;
       font-size: 20px;
+      margin-top: 0;
     }
     .bio {
       color: #757575;
+      margin-bottom: 10px;
     }
     button {
       background-image: linear-gradient(#fcfcfc, #eee);
@@ -104,16 +122,21 @@ ul {
 .avatar-block {
   border-bottom: 1px solid #ECECEC;
   padding-bottom: 10px;
+  img {
+    width: 100%;
+  }
 }
 
 #org-section {
   img {
     width: 40px;
     height: 40px;
+    margin-left: 39px;
   }
 }
 .profile-info {
   border-bottom: 1px solid #ECECEC;
+  line-height: 25px;
 }
 // repos template and section
 
@@ -136,10 +159,17 @@ ul {
     padding: 20px 0;
     p {
       display: inline-block;
+      word-wrap: break-word;
     }
-    span {
+    h4 {
+      font-size: 16px;
+    }
+    .language {
       float: right;
       color: #767676;
+      .star {
+        margin-left: 30px;
+      }
     }
 }
 
@@ -148,6 +178,7 @@ footer {
     border-top: 1px solid #EEEEEE;
     font-size: 12px;
     line-height: 100px;
+    margin-top: 50px;
 
     ul {
         display: inline-flex;
